# nomadic-mcp

./: .gitignore  PUBLISHING.md  README.md  nomadicml-mcp.spec  package.json  pyproject.toml
.claude/: settings.local.json
.github/workflows/: build-publish.yml
scripts/: install.js
src/nomadicml_mcp/: server.py
src/nomadicml_mcp/.claude/: settings.local.json
tests/: test_server.py
