[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nomadicml-mcp"
version = "0.2.0"
description = "MCP server for NomadicML — full SDK coverage for Claude Code and Claude.ai"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "nomadicml", "video", "ai", "claude", "video-analysis"]
dependencies = [
    "mcp[cli]>=1.0.0",
    "nomadicml>=0.1.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
nomadicml-mcp = "nomadicml_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nomadicml_mcp"]
